<resources>
    <string name="app_name">Market Belbeis</string>
    <string name="internetConnection">Check Your Network Connection…</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="e_mail">E-Mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="re_password">Re-Password</string>
    <string name="send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_facebook">Sign Up With Facebook</string>
    <string name="favorite">Favorite</string>
    <string name="categories">Categories</string>
    <string name="marketplace">Marketplace</string>
    <string name="home">Home</string>
    <string name="what_are_you_looking_for">What are you looking for…</string>
    <string name="cart">Cart</string>
    <string name="show_all"><![CDATA[show all >>]]></string>
</resources>